package maidsafe.nfs.protobuf;
import "maidsafe/nfs/persona_id.proto";
option optimize_for = LITE_RUNTIME;

message DataMessage {
  message Data {
    required int32 type = 1;
    required bytes name = 2;
    optional bytes content = 3;
    required int32 action = 4;
  }
  message ClientValidation {
    required bytes name = 1;
    required bytes data_signature = 2;
  }
  required bytes message_id = 1;
  required int32 destination_persona = 2;
  required PersonaId source = 3;
  required Data data = 4;
  optional ClientValidation client_validation = 5;
  optional bytes data_holder = 6;
}
